--- a/project_state.json
+++ b/project_state.json
@@ -1,6 +1,6 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 63,
+  "projectStateVersion": 65,
   "summary": "Zweeti Fast Food Billing app — a mobile-friendly fast food billing web app. The user has provided an updated CSS reference design with: gradient body background (linear-gradient 135deg #ff5722 to #ff9800), app container max-width 420px with #f5f5f5 background, orange #ff5722 header bar, white cards with border-radius 12px and box-shadow, table headers with #ffe0d6 background, buttons full-width with border-radius 8px (Print: #4caf50, PDF: #2196f3, Clear: #9e9e9e). User has also requested Invoice Number and Date fields. Save as PDF button calls window.print(). GST toggle checkbox (checked by default) toggles GST (5%) on/off. A login screen has been updated to use Firebase OTP phone authentication: phone input (+91XXXXXXXXXX), a recaptcha div, a Send OTP button, an OTP input, and a Verify button. Firebase Authentication integration is being added using Firebase JS SDK v9.23.0.",
   "architectural_notes": [
     "Single-page HTML app with inline CSS and vanilla JS",
@@ -390,6 +390,14 @@
       "title": "In frontend/src/firebase.ts, update the Firebase app configuration to add 'localhost' and '127.0.0.1' as authorized domains for Firebase Authentication. Ensure the authDomain field in the firebaseConfig object continues to use the existing real project credentials, and that the RecaptchaVerifier initialization in App.tsx does not block or error when the app is served from localhost or 127.0.0.1. If the Firebase stub (mock) implementation is being used instead of the real firebase npm package, ensure the mock RecaptchaVerifier and signInWithPhoneNumber behave permissively when called from localhost so that OTP flow can be tested locally without Firebase rejecting the domain.",
       "reqIds": [
         "REQ-50"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-frontend-src-firebase-ts-update-the-authdomain-field-in-the-firebaseconfig-object-to-yourdomain-com-keep-all-other-existing-firebaseconfig-values-apikey-projectid-appid-etc-and-all-existing-exports-auth-instance-via-getauth-recaptchaverifier-signinwithphonenumber-unchanged",
+      "title": "In frontend/src/firebase.ts, update the authDomain field in the firebaseConfig object to 'yourdomain.com'. Keep all other existing firebaseConfig values (apiKey, projectId, appId, etc.) and all existing exports (auth instance via getAuth, RecaptchaVerifier, signInWithPhoneNumber) unchanged.",
+      "reqIds": [
+        "REQ-51"
       ],
       "version": 1
     }
