--- a/project_state.json
+++ b/project_state.json
@@ -1,6 +1,6 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 65,
+  "projectStateVersion": 67,
   "summary": "Zweeti Fast Food Billing app — a mobile-friendly fast food billing web app. The user has provided an updated CSS reference design with: gradient body background (linear-gradient 135deg #ff5722 to #ff9800), app container max-width 420px with #f5f5f5 background, orange #ff5722 header bar, white cards with border-radius 12px and box-shadow, table headers with #ffe0d6 background, buttons full-width with border-radius 8px (Print: #4caf50, PDF: #2196f3, Clear: #9e9e9e). User has also requested Invoice Number and Date fields. Save as PDF button calls window.print(). GST toggle checkbox (checked by default) toggles GST (5%) on/off. A login screen has been updated to use Firebase OTP phone authentication: phone input (+91XXXXXXXXXX), a recaptcha div, a Send OTP button, an OTP input, and a Verify button. Firebase Authentication integration is being added using Firebase JS SDK v9.23.0.",
   "architectural_notes": [
     "Single-page HTML app with inline CSS and vanilla JS",
@@ -514,6 +514,14 @@
       "summary": "In App.tsx, update the phone number input placeholder on the Firebase OTP login screen from its current value to '+91XXXXXXXXXX', matching the format the user provided.",
       "reqIds": [
         "REQ-48"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-24",
+      "summary": "In App.tsx, ensure the phone number input field on the Firebase OTP login screen is pre-populated with the value '+911234567890' and the OTP input field is pre-populated with the value '123456' as default values via React state initializers. These test credentials must appear ready-to-use when the login screen loads, without any user interaction.",
+      "reqIds": [
+        "REQ-52"
       ],
       "status": "pending"
     }
